@@ -8,7 +8,6 @@ import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.databind.introspect.AnnotatedMember;
 import com.fasterxml.jackson.databind.introspect.JacksonAnnotationIntrospector;
 import com.fasterxml.jackson.databind.json.JsonMapper;
-import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
 import com.google.gson.Gson;
 import com.insidious.common.weaver.ClassInfo;
 import com.insidious.common.weaver.DataInfo;
@@ -117,11 +116,6 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
             jacksonBuilder.annotationIntrospector(new JacksonAnnotationIntrospector() {
                 @Override
                 public boolean hasIgnoreMarker(AnnotatedMember m) {
-//                    System.err.println("[" + m.getMember()
-//                            .getClass() + "]" + "Check hasIngore marker: " + m.getMember());
-//                    if (m.getMember() instanceof Method) {
-//                        return true;
-//                    }
                     return false;
                 }
             });
@@ -135,30 +129,44 @@ public class DetailedEventStreamAggregatedLogger implements IEventLogger {
                 Class<?> hibernateModule = Class.forName("com.fasterxml.jackson.datatype.hibernate5.Hibernate5Module");
                 Module module = (Module) hibernateModule.getDeclaredConstructor()
                         .newInstance();
-                Method configureMethod = hibernateModule.getMethod("configure",
-                        Class.forName("com.fasterxml.jackson.datatype.hibernate5.Hibernate5Module$Feature"),
-                        boolean.class);
-                configureMethod.invoke(module, Hibernate5Module.Feature.FORCE_LAZY_LOADING, true);
-                configureMethod.invoke(module, Hibernate5Module.Feature.REPLACE_PERSISTENT_COLLECTIONS, true);
+                Class<?> featureClass = Class.forName("com.fasterxml.jackson.datatype.hibernate5.Hibernate5Module$Feature");
+                Method configureMethod = hibernateModule.getMethod("configure", featureClass, boolean.class);
+                configureMethod.invoke(module, featureClass.getDeclaredField("FORCE_LAZY_LOADING").get(null), true);
+                configureMethod.invoke(module, featureClass.getDeclaredField("REPLACE_PERSISTENT_COLLECTIONS").get(null), true);
                 jacksonBuilder.addModule(module);
-            } catch (ClassNotFoundException e) {
+                System.out.println("Loaded hibernate module");
+            } catch (ClassNotFoundException | NoSuchMethodException e) {
+//                e.printStackTrace();
+//                System.out.println("Failed to load hibernate module: " + e.getMessage());
                 // hibernate module not found
                 // add a warning in System.err here ?
+            } catch (InvocationTargetException e) {
+                throw new RuntimeException(e);
+            } catch (InstantiationException e) {
+                throw new RuntimeException(e);
+            } catch (IllegalAccessException e) {
+                throw new RuntimeException(e);
+            } catch (NoSuchFieldException e) {
+                throw new RuntimeException(e);
             }
 
             try {
                 //checks for presence of this module class, if not present throws exception
                 Class<?> jdk8Module = Class.forName("com.fasterxml.jackson.datatype.jdk8.Jdk8Module");
-                jacksonBuilder.addModule(new Jdk8Module());
+                jacksonBuilder.addModule((Module) jdk8Module.getDeclaredConstructor().newInstance());
             }catch (ClassNotFoundException e){
                 // jdk8 module not found
+            } catch (InvocationTargetException
+                     | InstantiationException
+                     | IllegalAccessException
+                     | NoSuchMethodException e) {
+                throw new RuntimeException(e);
             }
 
 
             try {
                 Class<?> jodaModule = Class.forName("com.fasterxml.jackson.datatype.joda.JodaModule");
-                jacksonBuilder.addModule((Module) jodaModule.getDeclaredConstructor()
-                        .newInstance());
+                jacksonBuilder.addModule((Module) jodaModule.getDeclaredConstructor().newInstance());
 //                System.err.println("Loaded JodaModule");
 
             } catch (ClassNotFoundException e) {
